# facet-msgpack

./: CHANGELOG.md  Cargo.toml  README.md
src/: deserialize.rs  errors.rs  serialize.rs
tests/: write.rs
