[package]
name = "facet-msgpack"
version = "0.25.18"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-msgpack"
description = "MessagePack serialization and deserialization for Facet types"
keywords = [
    "msgpack",
    "serialization",
    "deserialization",
    "reflection",
    "facet",
]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
facet-core = { version = "0.28.0" }
facet-reflect = { version = "0.28.0" }
log = "0.4.27"
facet-serialize = { version = "0.28.0" }

[dev-dependencies]
facet = { version = "0.28.0" }
facet-testhelpers = { version = "0.28.0" }
eyre = "0.6.12"
insta = "1.43.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
